--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <canvas id="canvas" width="480" height="320"></canvas>
 
 <script src="src/modelos/Modelo.js"></script>
+    <script src="src/modelos/bloques/Bloque.js"></script>
     <script src="src/modelos/bloques/Obstaculo.js"></script>
     <script src="src/modelos/bloques/Torre.js"></script>
     <script src="src/modelos/bloques/Barrera.js"></script>
@@ -29,11 +30,11 @@
     <script src="src/modelos/Enemigo.js"></script>
     <script src="src/modelos/DisparoJugador.js"></script>
     <script src="src/modelos/Texto.js"></script>
-    <script src="src/modelos/Bloque.js"></script>
     <script src="src/modelos/Boton.js"></script>
     <script src="src/modelos/Pad.js"></script>
     <script src="src/modelos/propiedades/Propiedad.js"></script>
         <script src="src/modelos/propiedades/Cuartel.js"></script>
+        <script src="src/modelos/propiedades/Ayuntamiento.js"></script>
         <script src="src/modelos/propiedades/Mina.js"></script>
         <script src="src/modelos/propiedades/Serreria.js"></script>
     <script src="src/modelos/tropas/Tropa.js"></script>
@@ -41,6 +42,9 @@
         <script src="src/modelos/tropas/Lancero.js"></script>
         <script src="src/modelos/tropas/Caballero.js"></script>
         <script src="src/modelos/tropas/Arquero.js"></script>
+        <script src="src/modelos/tropas/Espadachin.js"></script>
+        <script src="src/modelos/tropas/Catapulta.js"></script>
+
 
 <script src="src/layers/Layer.js"></script>
     <script src="src/layers/GameLayer.js"></script>
