Inteligencia del enemigo, generar enemigos, coste de compras, barreras

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <script src="src/modelos/Modelo.js"></script>
     <script src="src/modelos/bloques/Bloque.js"></script>
         <script src="src/modelos/bloques/Obstaculo.js"></script>
-        <script src="src/modelos/bloques/Torre.js"></script>
         <script src="src/modelos/bloques/Barrera.js"></script>
         <script src="src/modelos/bloques/Base.js"></script>
     <script src="src/modelos/Jugador.js"></script>
@@ -59,6 +58,7 @@
 <script src="src/EventosPulsacion.js"></script>
 <script src="src/EventosGamePad.js"></script>
 <script src="src/Res.js"></script>
+<script src="src/Coste.js"></script>
 <script src="Main.js"></script>
 
 </body>
