--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="src/modelos/Enemigo.js"></script>
     <script src="src/modelos/DisparoJugador.js"></script>
     <script src="src/modelos/Texto.js"></script>
+    <script src="src/modelos/Texto2.js"></script>
     <script src="src/modelos/Boton.js"></script>
     <script src="src/modelos/Pad.js"></script>
     <script src="src/modelos/propiedades/Propiedad.js"></script>
