--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script src="src/modelos/DisparoJugador.js"></script>
     <script src="src/modelos/Texto.js"></script>
     <script src="src/modelos/Texto2.js"></script>
+    <script src="src/modelos/Texto3.js"></script>
+    <script src="src/modelos/Texto4.js"></script>
     <script src="src/modelos/Boton.js"></script>
     <script src="src/modelos/Pad.js"></script>
     <script src="src/modelos/propiedades/Propiedad.js"></script>
