BOTONES TERMINADOS Y FUNCIONALIDAD

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <canvas id="canvas" width="480" height="320"></canvas>
 
-
+<script src="src/modelos/Mapa.js"></script>
 <script src="src/modelos/Modelo.js"></script>
-    <script> src="src/modelos/bloques/Bloque.js"></script>
+    <script src="src/modelos/bloques/Bloque.js"></script>
     <script src="src/modelos/bloques/Obstaculo.js"></script>
     <script src="src/modelos/bloques/Torre.js"></script>
     <script src="src/modelos/bloques/Barrera.js"></script>
