--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <script src="src/modelos/Enemigo.js"></script>
     <script src="src/modelos/DisparoJugador.js"></script>
     <script src="src/modelos/Texto.js"></script>
-    <script src="src/modelos/Texto2.js"></script>
-    <script src="src/modelos/Texto3.js"></script>
-    <script src="src/modelos/Texto4.js"></script>
+    <script src="src/modelos/TextoOro.js"></script>
+    <script src="src/modelos/TextoMadera.js"></script>
+    <script src="src/modelos/TextoHierro.js"></script>
     <script src="src/modelos/Boton.js"></script>
     <script src="src/modelos/Pad.js"></script>
     <script src="src/modelos/propiedades/Propiedad.js"></script>
@@ -62,14 +62,13 @@
 
     <script src="src/graficos/Animacion.js"></script>
 
+    <script src="Main.js"></script>
     <script src="src/Espacio.js"></script>
     <script src="src/Globales.js"></script>
     <script src="src/Eventosteclado.js"></script>
     <script src="src/EventosPulsacion.js"></script>
-    <script src="src/EventosGamePad.js"></script>
     <script src="src/Res.js"></script>
     <script src="src/Coste.js"></script>
-    <script src="Main.js"></script>
 
 </body>
 
