--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 
-    <title>Juego de Naves</title>
+    <title>TotalWar Libre</title>
     <style>
         * {
             padding: 0;
