Creacion de Montaña

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="src/modelos/Mapa.js"></script>
     <script src="src/modelos/Modelo.js"></script>
     <script src="src/modelos/bloques/Bloque.js"></script>
+    <script src="src/modelos/bloques/Montana.js"></script>
     <script src="src/modelos/bloques/Obstaculo.js"></script>
     <script src="src/modelos/bloques/Barrera.js"></script>
     <script src="src/modelos/bloques/Base.js"></script>
