Pantalla Ganar Perder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 
-    <title>TotalWar Libre</title>
+    <title>Medieval Conquest</title>
     <style>
         * {
             padding: 0;
@@ -60,6 +60,8 @@
     <script src="src/layers/Layer.js"></script>
     <script src="src/layers/GameLayer.js"></script>
     <script src="src/layers/MenuLayer.js"></script>
+    <script src="src/layers/PerderLayer.js"></script>
+    <script src="src/layers/GanarLayer.js"></script>
 
     <script src="src/graficos/Animacion.js"></script>
 
