--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
     <script src="Main.js"></script>
     <script src="src/Globales.js"></script>
+    <script src="src/GestorAudio.js"></script>
     <script src="src/Eventosteclado.js"></script>
     <script src="src/EventosPulsacion.js"></script>
     <script src="src/Res.js"></script>
